--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,11 +16,11 @@ build:
 
 requirements:
   host:
-    - python >=3.9
+    - python >=3.9,<3.13
     - setuptools
     - pip
   run:
-    - python >=3.9
+    - python >=3.9,<3.13
     - h5py
     - matplotlib-base
     - numpy
